# ste-testing

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/testing_classes/: CMakeLists.txt  main.cpp  some_class_tests.cpp  some_class_tests.hpp
examples/testing_functions/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  testing.hpp
